[gd_scene load_steps=4 format=3 uid="uid://cx2nxtcrodub4"]

[ext_resource type="Script" uid="uid://h1ar55xsdmwn" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://de0renl7wmjg4" path="res://web.tscn" id="1_ig7tw"]

[sub_resource type="Curve2D" id="Curve2D_ig7tw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 600, 0, 0, 0, 0, 0, 600, 600, 0, 0, 0, 0, 0, 600, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node2D"]
script = ExtResource("1_0xm2m")

[node name="Web" parent="." instance=ExtResource("1_ig7tw")]
strands = 10

[node name="FlyPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_ig7tw")

[node name="FlySpawnLocation" type="PathFollow2D" parent="FlyPath"]

[node name="FlySpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="FlySpawnTimer" to="." method="_on_fly_spawn_timer_timeout"]
